# RunFromRun

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  claude_desktop_entrypoint.sh  docker-compose.yml  example.py  pyproject.toml  touch_mount_dir.sh
app/: rfr_server.py  tools.py
common/: response.json  schema.py  settings.py
data_pulling/: apis.py  dataframe_process.py  get_macro.py  get_onchain.py  openfigi_api.py  pdf_analysis.py  pdf_fetch_caching.py  url_fetch.py
data_pulling/offchain/: dataframe_process.py  pdf_analysis.py  pdf_fetch_caching.py
data_pulling/onchain/: ABI.yaml  DEX_simulate.py  chain_config.yaml  coingecko_api.py  evm.py  get_onchain.py  solana.py  sui.py  tron.py
index_calculation/: base_calculator.py  calculator.py  ohs.py  rqs.py  rrs.py  trs.py
mcp/: server.py  tools.py
summary/: clean_up.py  decision.py  threshold_check.py
test/: all.py  api_test.py  calculator_test.py  camelot_test.py  coingecko_test.py  fetch_caching_test.py  openfigi_test.py  pdf_analysis_test.py  settings_test.py  test.py  usdt.py  web3_test.py
