[project]
name = "koscomaichallenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "camelot-py>=1.0.9",
    "coingecko-sdk>=1.10.1",
    "dotenv>=0.9.9",
    "mcp>=1.15.0",
    "ollama>=0.6.0",
    "pandas>=2.3.3",
    "pdf2image>=1.17.0",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "pymupdf>=1.26.6",
    "pytesseract>=0.3.13",
    "requests>=2.32.5",
]
