[project]
name = "RunFromRun"
version = "0.1.0"
description = "Stable Coin Risk Analyzing MCP Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "camelot-py>=1.0.9",
    "coingecko-sdk>=1.10.1",
    "dotenv>=0.9.9",
    "matplotlib>=3.10.7",
    "mcp[cli]>=1.21.0",
    "ollama>=0.6.0",
    "pandas>=2.3.3",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "pymupdf>=1.26.6",
    "requests>=2.32.5",
    "rich>=14.2.0",
]

[project.scripts]
rfr-mcp = "app.rfr_server:main"
